# class_sz

./: .gitignore  CLASS_rename.py  LICENSE  MANIFEST.in  Makefile  Makefile_linux  Makefile_m1  Makefile_preM1mac  PKG-INFO  README.md  README.rst  class-sz_simple.ini  class-sz_simple_B12.ini  class-sz_simple_CustomGNFW.ini  class_sz_background_only.ini  class_sz_cluster_counts_high_precision.ini  class_sz_cluster_counts_high_precision_1rmsbin.ini  class_sz_cluster_counts_high_precision_5rmsbin.ini  class_sz_cluster_counts_high_precision_planck.ini  class_sz_cluster_counts_high_precision_planck_unbinned.ini  class_sz_ggk_test.ini  class_sz_ksz2g_test.ini  class_sz_ksz2x.ini  class_sz_nzbinned_actso_test.ini  class_sz_test.ini  class_sz_test_HI.ini  class_sz_test_IA.ini  class_sz_test_IA.py  class_sz_test_age.ini  class_sz_test_cib.ini  class_sz_test_gammat.ini  class_sz_test_hmf.ini  class_sz_test_kk.py  class_sz_test_kk_julien.py  class_sz_test_maniyar_cib.ini  class_sz_test_maniyar_cib_minimal.ini  class_sz_test_many_galaxies.ini  class_sz_test_many_galaxies_benchmark.ini  class_sz_test_many_galaxies_hf_benchmark.ini  class_sz_test_masses.ini  (+38 more)
class-sz/: Makefile  Makefile_linux  Makefile_m1  Makefile_preM1mac  Makefile_windows  class_sz_test.ini  class_sz_test_gg.ini  download_emulators.sh  select_makefile.sh
class_sz_auxiliary_files/: LSST_bin1.txt  LSST_bin2.txt  LSST_bin3.txt  LSST_bin4.txt  LSST_bin5.txt  LSST_bin6.txt  LSST_bin7.txt  LSST_bin8.txt  SZ_cat_nemosimkit_cluster_patch_indices.npy  Tinker_et_al_10_alpha_consistency_msyriac.txt  WISC_bin3_ngal_example4.txt  class_sz_tabulate_profiles.ipynb  cmb_cls_test.pickle  filtered_snu_planck_fine.txt  filtered_snu_planck_z_fine.txt  nemo_sim_thetas_030722_50bins.txt  (+9 more)
cpp/: ClassEngine.cc
(+507 files in other folders)
