[build-system]
requires = ["setuptools", "wheel", "Cython>=0.29.21", "numpy"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
    "classy_szfast >= 0.0.25.post13"
]
dynamic = ["version"]
name = "classy_sz"
maintainers = [{name = "Boris Bolliet",email="bb667@cam.ac.uk"}]
authors = [{name = "Boris Bolliet", email = "bb667@cam.ac.uk"}]
description = "The class_sz code from https://github.com/CLASS-SZ"
readme = "class-sz/README.md"
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/CLASS-SZ"
GitHub = "https://github.com/CLASS-SZ"


